force-app/main/default/objects/SourcingGroup__c/SourcingGroup__c.object-meta.xml
<CustomObject>
    <label>Sourcing Group</label>
    <pluralLabel>Sourcing Groups</pluralLabel>
    <nameField>
        <label>SourcingGroup Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>