force-app/main/default/objects/SourcingGroup__c/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <label>Contract Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>