force-app/main/default/objects/SourcingGroup__c/fields/EvaludationTarget__c.field-meta.xml
<CustomField>
    <fullName>EvaludationTarget__c</fullName>
    <label>Evaludation Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>