force-app/main/default/objects/SourcingGroup__c/fields/ParentSourcingGroup__c.field-meta.xml
<CustomField>
    <fullName>ParentSourcingGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Sourcing Group</label>
    <referenceTo>SourcingGroup__c</referenceTo>
    <relationshipLabel>Sourcing Group</relationshipLabel>
    <relationshipName>ChildSourcingGroup</relationshipName>
    <type>Lookup</type>
</CustomField>