force-app/main/default/objects/SourcingGroup__c/fields/PurchaseItemSpec__c.field-meta.xml
<CustomField>
    <fullName>PurchaseItemSpec__c</fullName>
    <label>Item Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>