force-app/main/default/objects/SourcingGroup__c/fields/PurchasePeriod__c.field-meta.xml
<CustomField>
    <fullName>PurchasePeriod__c</fullName>
    <label>Purchase Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>