force-app/main/default/objects/SourcingGroup__c/fields/PurchaseType__c.field-meta.xml
<CustomField>
    <fullName>PurchaseType__c</fullName>
    <label>Purchase Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>