force-app/main/default/objects/SourcingGroup__c/fields/QualityTechnology__c.field-meta.xml
<CustomField>
    <fullName>QualityTechnology__c</fullName>
    <label>Quality Technology</label>
    <type>TextArea</type>
</CustomField>