force-app/main/default/objects/SourcingGroup__c/fields/RequiredEquipment__c.field-meta.xml
<CustomField>
    <fullName>RequiredEquipment__c</fullName>
    <label>Required Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>