force-app/main/default/objects/SourcingGroup__c/fields/SGCode__c.field-meta.xml
<CustomField>
    <fullName>SGCode__c</fullName>
    <label>SG Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>