force-app/main/default/objects/SourcingGroup__c/fields/SourcingGroupLevel__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel__c</fullName>
    <label>Sourcing Group Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GroupLevel1</fullName>
                <label>1: Group Level 1</label>
            </value>
            <value>
                <fullName>GroupLevel2</fullName>
                <label>2: Group Level 2</label>
            </value>
            <value>
                <fullName>GroupLevel3</fullName>
                <label>3: Group Level 3</label>
            </value>
            <value>
                <fullName>GroupLevel4</fullName>
                <label>4: Group Level 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>