force-app/main/default/objects/SourcingGroup__c/fields/SupplierQualification__c.field-meta.xml
<CustomField>
    <fullName>SupplierQualification__c</fullName>
    <label>Supplier Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>