force-app/main/default/objects/SourcingGroup__c/fields/SupplyChainCharacteristics__c.field-meta.xml
<CustomField>
    <fullName>SupplyChainCharacteristics__c</fullName>
    <label>Supply Chain Characteristics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>