force-app/main/default/objects/SourcingGroup__c/fields/SupplyMarketCharacteristics__c.field-meta.xml
<CustomField>
    <fullName>SupplyMarketCharacteristics__c</fullName>
    <label>Market Characteristics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>