force-app/main/default/objects/SourcingGroup__c/fields/SupplyMarketTrend__c.field-meta.xml
<CustomField>
    <fullName>SupplyMarketTrend__c</fullName>
    <label>Supply Market Trend</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>