force-app/main/default/objects/SourcingGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SGCode__c</columns>
    <columns>ParentSourcingGroup__c</columns>
    <columns>Order__c</columns>
    <columns>PurchaseType__c</columns>
    <columns>PurchasePeriod__c</columns>
    <columns>SourcingGroupLevel__c</columns>
    <columns>SupplyMarketCharacteristics__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>